--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -327,6 +327,63 @@
 	unzip -j files.zip path/file1 path/file2 -d outdir
 
 
+#### 证书维护管理
+
+参考资料
+
+	How do you sign Certificate Signing Request with your Certification Authority?
+	http://stackoverflow.com/questions/21297139/how-do-you-sign-certificate-signing-request-with-your-certification-authority
+
+	How To Create an SSL Certificate on Nginx for Ubuntu 14.04
+	https://www.digitalocean.com/community/tutorials/how-to-create-an-ssl-certificate-on-nginx-for-ubuntu-14-04
+
+直接生成自签名 SSL 证书
+
+	openssl req -x509 -nodes -days 3650 -newkey rsa:2048 -subj /CN=192.168.150.32 -keyout 192.168.150.32.key -out 192.168.150.32.cer
+
+生成 CA 根证书
+
+	openssl genrsa -out my-ca.key 2048
+	openssl req -sha256 -x509 -new -key my-ca.key -out my-ca.cer -days 3650 -subj /CN="My Self-Signed CA"
+
+从 CA 颁发证书
+
+	# 创建单个域名的证书
+	openssl genrsa -out 192.168.150.32.key 2048
+	openssl req -sha256 -new -out 192.168.150.32.req -key 192.168.150.32.key -subj "/CN=192.168.150.32"
+	openssl x509 -sha256 -req -in 192.168.150.32.req -out 192.168.150.32.cer -CAkey my-ca.key -CA my-ca.cer -days 3650 -CAcreateserial -CAserial serial
+	cat my-ca.cer >> 192.168.150.32.cer
+
+	# 创建通配域名的证书
+	openssl genrsa -out my-domain.com.key 2048
+	openssl req -sha256 -new -out my-domain.com.req -key my-domain.com.key -subj "/CN=*.my-domain.com"
+	openssl req -in my-domain.com.req -text -noout
+	openssl x509 -sha256 -req -in my-domain.com.req -out my-domain.com.cer -CAkey my-ca.key -CA my-ca.cer -days 3650 -CAcreateserial -CAserial serial
+	cat my-ca.cer >> my-domain.com.cer
+
+	# 创建多个域名的证书
+	openssl genrsa -out 192.168.150.32.key 2048
+	openssl req -sha256 -new -out 192.168.150.32.req -key 192.168.150.32.key -subj "/CN=*.my-domain.com"
+	openssl req -in 192.168.150.32.req -text -noout
+	openssl x509 -sha256 -req -in 192.168.150.32.req -out 192.168.150.32.cer -CAkey my-ca.key -CA my-ca.cer -days 3650 -CAcreateserial -CAserial serial -extfile <(
+	  cat <<-EOF
+	  extensions = v3_req
+	  [v3_req]
+	  basicConstraints = CA:FALSE
+	  keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+	  subjectAltName = @alt_names
+	  [alt_names]
+	  DNS.1 = *.my-domain.com
+	  DNS.2 = my-domain.com
+	  DNS.3 = www.my-domain.com
+	  DNS.4 = other-domain.com
+	  DNS.5 = 192.168.150.32
+	  IP = 192.168.150.32
+	EOF
+	)
+	cat my-ca.cer >> 192.168.150.32.cer
+
+
 #### 配置 SSH 证书方式登录
 
 	# 生成 key pair
