--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -229,6 +229,21 @@
 	</Location>
 
 
+#### Python 2.7.x & PIP
+
+	cd /mnt/src
+	wget https://www.python.org/ftp/python/2.7.11/Python-2.7.11.tgz
+	tar -xvf Python-2.7.11.tgz
+	cd Python-2.7.11
+	./configure --prefix=/usr/local --enable-unicode=ucs4 --enable-shared LDFLAGS="-Wl,-rpath /usr/local/lib"
+	make
+	make altinstall
+
+	wget https://bootstrap.pypa.io/ez_setup.py
+	python2.7 ez_setup.py
+	easy_install-2.7 pip
+
+
 #### tor -- 用于抓网页时为规避防刷机制而换 IP
 
 	yum install tor nc
