--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -189,6 +189,85 @@
 	svnadmin load /mnt/svn_root/myrepo < myrepo-9133-9138.svn.dump
 
 
+#### Gerrit
+
+> https://www.gerritcodereview.com/
+
+	# 准备工作目录和身份认证文件
+	mkdir /mnt/gerrit
+	chown apache:apache /mnt/gerrit
+	chmod 777 /mnt/gerrit
+	touch /mnt/gerrit/users
+	htpasswd /mnt/gerrit/users username
+
+	# 创建专用帐号，并下载安装 Gerrit
+	adduser gerrit2
+	su gerrit2
+	cd
+	wget https://www.gerritcodereview.com/download/gerrit-2.13.5.war
+	java -jar gerrit-2.13.5.war init --batch -d /mnt/gerrit/playground
+
+	# 修改 /etc/httpd/conf.d/gerrit.conf 文件：
+```
+Listen 82
+<VirtualHost 1.2.3.4:82>
+	ServerName 1.2.3.4
+
+	ProxyRequests Off
+	ProxyVia Off
+	ProxyPreserveHost On
+
+	<Proxy *>
+		Order deny,allow
+		Allow from all
+	</Proxy>
+
+	<Location /playground/login/>
+		AuthType Basic
+		AuthName "Gerrit Code Review"
+		Require valid-user
+		AuthUserFile /mnt/gerrit/users
+	</Location>
+
+	AllowEncodedSlashes On
+	ProxyPass /playground/ http://localhost:8082/
+</VirtualHost>
+```
+
+	# 修改 /mnt/gerrit/playground/etc/gerrit.config 文件
+```
+[gerrit]
+	basePath = git
+	serverId = bc41c985-ca83-4c35-ad74-7064b3f26193
+	canonicalWebUrl = http://1.2.3.4:82/playground/
+[database]
+	type = h2
+	database = /mnt/gerrit/playground/db/ReviewDB
+[auth]
+	type = HTTP
+[receive]
+	enableSignedPush = false
+[sendemail]
+	smtpServer = localhost
+[container]
+	user = gerrit2
+	javaHome = /usr/lib/jvm/java-1.7.0-openjdk-1.7.0.71.x86_64/jre
+[sshd]
+	listenAddress = *:29418
+[httpd]
+	listenUrl = http://localhost:8082/
+[cache]
+	directory = cache
+```
+
+	# 重启 Gerrit 和 Apache
+	/mnt/gerrit/playground/bin/gerrit.sh restart
+	/etc/rc.d/init.d/httpd restart
+
+	# 访问 Gerrit 网页
+	http://1.2.3.4:82/playground/
+
+
 #### WebSVN
 
 > http://www.websvn.info/
