--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -193,25 +193,27 @@
 
 > https://www.gerritcodereview.com/
 
-	# 准备工作目录和身份认证文件
-	mkdir /mnt/gerrit
-	chown apache:apache /mnt/gerrit
-	chmod 777 /mnt/gerrit
-	touch /mnt/gerrit/users
-	htpasswd /mnt/gerrit/users username
+创建专用帐号，并下载安装 Gerrit
 
-	# 创建专用帐号，并下载安装 Gerrit
-	adduser gerrit2
+	useradd -g apache gerrit2
 	su gerrit2
 	cd
 	wget https://www.gerritcodereview.com/download/gerrit-2.13.5.war
-	java -jar gerrit-2.13.5.war init --batch -d /mnt/gerrit/playground
+	java -jar gerrit-2.13.5.war init --batch -d /mnt/gerrit
+	exit
 
-	# 修改 /etc/httpd/conf.d/gerrit.conf 文件：
+创建并维护身份认证文件
+
+	touch /mnt/gerrit/users
+	htpasswd /mnt/gerrit/users username
+
+配置 Apache server，为 Gerrit 提供服务
+
+	# 参考下面内容创建 /etc/httpd/conf.d/gerrit.conf 文件：
 ```
 Listen 82
-<VirtualHost 1.2.3.4:82>
-	ServerName 1.2.3.4
+<VirtualHost my-gerrit-host:82>
+	ServerName my-gerrit-host
 
 	ProxyRequests Off
 	ProxyVia Off
@@ -222,7 +224,7 @@ Listen 82
 		Allow from all
 	</Proxy>
 
-	<Location /playground/login/>
+	<Location /login/>
 		AuthType Basic
 		AuthName "Gerrit Code Review"
 		Require valid-user
@@ -230,25 +232,36 @@ Listen 82
 	</Location>
 
 	AllowEncodedSlashes On
-	ProxyPass /playground/ http://localhost:8082/
+	ProxyPass / http://localhost:8082/
 </VirtualHost>
 ```
+	# 重启 Apache server
+	/etc/rc.d/init.d/httpd restart
 
-	# 修改 /mnt/gerrit/playground/etc/gerrit.config 文件
+维护 Gerrit 运行
+
+	# 参考下面内容适当修改 /mnt/gerrit/etc/gerrit.config 文件：
 ```
 [gerrit]
 	basePath = git
 	serverId = bc41c985-ca83-4c35-ad74-7064b3f26193
-	canonicalWebUrl = http://1.2.3.4:82/playground/
+	canonicalWebUrl = http://my-gerrit-host:82/
 [database]
 	type = h2
-	database = /mnt/gerrit/playground/db/ReviewDB
+	database = /mnt/gerrit/db/ReviewDB
 [auth]
 	type = HTTP
+	gitBasicAuth = true
 [receive]
 	enableSignedPush = false
 [sendemail]
-	smtpServer = localhost
+	from = Code Review <gerrit@example.com>
+	smtpServer = smtp.example.com
+	smtpServerPort = 465
+	smtpEncryption = ssl
+	sslVerify = false
+	smtpUser = gerrit@example.com
+	smtpPass = password
 [container]
 	user = gerrit2
 	javaHome = /usr/lib/jvm/java-1.7.0-openjdk-1.7.0.71.x86_64/jre
@@ -260,12 +273,15 @@ Listen 82
 	directory = cache
 ```
 
-	# 重启 Gerrit 和 Apache
-	/mnt/gerrit/playground/bin/gerrit.sh restart
-	/etc/rc.d/init.d/httpd restart
+	# 安装 plugins
+	# 从 https://gerrit-ci.gerritforge.com/ 下载所需的 jar 文件并复制到 /mnt/gerrit/plugins 目录中
 
-	# 访问 Gerrit 网页
-	http://1.2.3.4:82/playground/
+	# 重启 Gerrit server
+	/mnt/gerrit/bin/gerrit.sh restart
+
+访问 Gerrit 网页
+
+	http://my-gerrit-host:82/
 
 
 #### WebSVN
