--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -17,7 +17,7 @@
 #### 系统补丁
 
 	# for gcc 4.8.5
-	yum install gmp-devel mpfr-devel libmpc-devel
+	yum install gmp-devel mpfr-devel libmpc-devel gcc gcc-c++
 
 	# for MySQL
 	yum install zlib-devel cmake ncurses-devel
@@ -52,6 +52,20 @@
 	cd /mnt/src
 	wget http://www.netgull.com/gcc/releases/gcc-4.8.5/gcc-4.8.5.tar.gz
 	tar -xvzf gcc-4.8.5.tar.gz
+
+	wget https://gmplib.org/download/gmp/gmp-6.1.2.tar.bz2
+	bunzip2 gmp-6.1.2.tar.bz2
+	tar -xvf gmp-6.1.2.tar
+	mv gmp-6.1.2 gcc-4.8.5/gmp
+
+	wget http://www.mpfr.org/mpfr-current/mpfr-3.1.5.tar.gz
+	tar -xvzf mpfr-3.1.5.tar.gz
+	mv mpfr-3.1.5 gcc-4.8.5/mpfr
+
+	wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.3.tar.gz
+	tar -xvzf mpc-1.0.3.tar.gz
+	mv mpc-1.0.3 gcc-4.8.5/mpc
+
 	cd gcc-4.8.5
 	./configure --enable-languages=c,c++ --disable-multilib
 	make && make install
@@ -75,12 +89,12 @@
 > http://dev.mysql.com/downloads/mysql/
 
 	cd /mnt/src
-	wget http://mirrors.sohu.com/mysql/MySQL-5.5/mysql-5.5.52.tar.gz
-	tar -xvzf mysql-5.5.52.tar.gz
-	cd mysql-5.5.52
+	wget https://cdn.mysql.com//Downloads/MySQL-5.6/mysql-5.6.35.tar.gz
+	tar -xvzf mysql-5.6.35.tar.gz
+	cd mysql-5.6.35
 	mkdir bld
 	cd bld
-	cmake .. -DCMAKE_INSTALL_PREFIX=/mnt/bin/mysql-5.5.52 -DMYSQL_DATADIR=/mnt/data/test
+	cmake .. -DCMAKE_INSTALL_PREFIX=/mnt/bin/mysql-5.6.35 -DMYSQL_DATADIR=/mnt/data/test
 	make
 	make install
 
@@ -88,11 +102,11 @@
 #### mysql -- 用于本机运行 mysql server
 
 	# 创建数据库目录
-	cd /mnt/bin/mysql-5.5.52
+	cd /mnt/bin/mysql-5.6.35
 	scripts/mysql_install_db --user=mysql --datadir=/mnt/data/test
 
 	# 生成配置文件
-	cp /mnt/bin/mysql-5.5.52/support-files/my-default.cnf /mnt/sites/config/my.cnf
+	cp /mnt/bin/mysql-5.6.35/support-files/my-default.cnf /mnt/sites/config/my.cnf
 
 	# 手工修改 /mnt/sites/config/my.cnf 文件，关注以下内容：
 
@@ -131,7 +145,7 @@
 		innodb_lock_wait_timeout = 50
 
 	# 生成启动脚本
-	cp /mnt/bin/mysql-5.5.52/support-files/mysql.server /mnt/sites/config/mysql.server
+	cp /mnt/bin/mysql-5.6.35/support-files/mysql.server /mnt/sites/config/mysql.server
 
 	# 手工修改 /mnt/sites/config/mysql.server 文件，关注以下内容：
 
@@ -153,7 +167,7 @@
 	chkconfig --add mysqld-test
 
 	# 设置数据库中 mysql 用户的密码：
-	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password= --socket=/tmp/mysql-test.sock
+	/mnt/bin/mysql-5.6.35/bin/mysql --user=root --password= --socket=/tmp/mysql-test.sock
 	GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' IDENTIFIED BY '***' WITH GRANT OPTION;
 	GRANT ALL PRIVILEGES ON *.* TO 'root'@'127.0.0.1' IDENTIFIED BY '***' WITH GRANT OPTION;
 	GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '***' WITH GRANT OPTION;
@@ -230,7 +244,7 @@
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.5.52 --with-mysql=/mnt/bin/mysql-5.5.52 --with-mysqli=/mnt/bin/mysql-5.5.52/bin/mysql_config --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --enable-xcache --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn
+	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.6.35 --with-mysql=/mnt/bin/mysql-5.6.35 --with-mysqli=/mnt/bin/mysql-5.6.35/bin/mysql_config --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --enable-xcache --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn
 	make clean
 	make
 	make install
