--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -158,12 +158,13 @@
 	ln -s /mnt/bin/serf-1.3.9/lib/libserf-1.so.1.3.0 /usr/local/lib/libserf-1.so
 
 	# 编译安装 subversion
-	wget http://mirrors.cnnic.cn/apache/subversion/subversion-1.9.4.tar.gz
-	tar -xvzf subversion-1.9.4.tar.gz
+	cd /mnt/src
+	wget http://www-us.apache.org/dist/subversion//subversion-1.9.5.tar.gz
+	tar -xvzf subversion-1.9.5.tar.gz
 	wget http://www.sqlite.org/sqlite-amalgamation-3071501.zip
-	mkdir subversion-1.9.4/sqlite-amalgamation
-	unzip -j sqlite-amalgamation-3071501.zip sqlite-amalgamation-3071501/sqlite3ext.h sqlite-amalgamation-3071501/sqlite3.h sqlite-amalgamation-3071501/sqlite3.c -d subversion-1.9.4/sqlite-amalgamation
-	cd subversion-1.9.4
+	mkdir subversion-1.9.5/sqlite-amalgamation
+	unzip -j sqlite-amalgamation-3071501.zip sqlite-amalgamation-3071501/sqlite3ext.h sqlite-amalgamation-3071501/sqlite3.h sqlite-amalgamation-3071501/sqlite3.c -d subversion-1.9.5/sqlite-amalgamation
+	cd subversion-1.9.5
 	./configure --with-serf=/mnt/bin/serf-1.3.9
 	make
 	make install
