--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -16,6 +16,11 @@
 
 #### 系统补丁
 
+	# 扩展更新包
+	yum install ca-certificates
+	yum install epel-release
+	yum update
+
 	# for gcc 4.8.5
 	yum install gmp-devel mpfr-devel libmpc-devel gcc gcc-c++
 
@@ -53,18 +58,20 @@
 	wget http://www.netgull.com/gcc/releases/gcc-4.8.5/gcc-4.8.5.tar.gz
 	tar -xvzf gcc-4.8.5.tar.gz
 
-	wget https://gmplib.org/download/gmp/gmp-6.1.2.tar.bz2
-	bunzip2 gmp-6.1.2.tar.bz2
-	tar -xvf gmp-6.1.2.tar
-	mv gmp-6.1.2 gcc-4.8.5/gmp
+	# gmp、mpfr、mpc 这三个程序包如果在系统中已经安装了合适的版本，也可以不用源码编译
 
-	wget http://www.mpfr.org/mpfr-current/mpfr-3.1.5.tar.gz
-	tar -xvzf mpfr-3.1.5.tar.gz
-	mv mpfr-3.1.5 gcc-4.8.5/mpfr
+		wget https://gmplib.org/download/gmp/gmp-6.1.2.tar.bz2
+		bunzip2 gmp-6.1.2.tar.bz2
+		tar -xvf gmp-6.1.2.tar
+		mv gmp-6.1.2 gcc-4.8.5/gmp
 
-	wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.3.tar.gz
-	tar -xvzf mpc-1.0.3.tar.gz
-	mv mpc-1.0.3 gcc-4.8.5/mpc
+		wget http://www.mpfr.org/mpfr-current/mpfr-3.1.5.tar.gz
+		tar -xvzf mpfr-3.1.5.tar.gz
+		mv mpfr-3.1.5 gcc-4.8.5/mpfr
+
+		wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.3.tar.gz
+		tar -xvzf mpc-1.0.3.tar.gz
+		mv mpc-1.0.3 gcc-4.8.5/mpc
 
 	cd gcc-4.8.5
 	./configure --enable-languages=c,c++ --disable-multilib
@@ -76,10 +83,10 @@
 > https://www.openssl.org/source/
 
 	cd /mnt/src
-	wget https://www.openssl.org/source/openssl-1.0.2h.tar.gz
-	tar -xvzf openssl-1.0.2h.tar.gz
-	cd openssl-1.0.2h
-	./config --prefix=/mnt/bin/openssl-1.0.2h -fPIC no-shared
+	wget https://www.openssl.org/source/openssl-1.1.0e.tar.gz
+	tar -xvzf openssl-1.1.0e.tar.gz
+	cd openssl-1.1.0e
+	./config --prefix=/mnt/bin/openssl-1.1.0e -fPIC no-shared
 	make
 	make install
 
@@ -181,38 +188,38 @@
 
 	# 下载 PHP 源代码
 	cd /mnt/src
-	wget http://mirrors.sohu.com/php/php-5.6.9.tar.gz
-	tar -xvzf php-5.6.9.tar.gz
+	wget http://php.net/distributions/php-5.6.30.tar.gz
+	tar -xvzf php-5.6.30.tar.gz
 
 	# 如果要把 apc 静态编译进 php
 	# http://pecl.php.net/package/apc
 	wget http://pecl.php.net/get/APC-3.1.13.tgz
 	tar -xzvf APC-3.1.13.tgz
-	mv APC-3.1.13 /mnt/src/php-5.6.9/ext/apc
+	mv APC-3.1.13 /mnt/src/php-5.6.30/ext/apc
 	# 编译 PHP 时增加 --enable-apc 选项
 
 	# 如果要把 xcache 静态编译进 php
 	wget http://xcache.lighttpd.net/pub/Releases/3.2.0/xcache-3.2.0.tar.gz
 	tar -xvzf xcache-3.2.0.tar.gz
-	mv xcache-3.2.0 /mnt/src/php-5.6.9/ext/xcache
+	mv xcache-3.2.0 /mnt/src/php-5.6.30/ext/xcache
 	# 编译 PHP 时增加 --enable-xcache 选项
 
 	# 如果要把 ssh2 静态编译进 php
 	wget http://pecl.php.net/get/ssh2-0.12.tgz
 	tar -xvzf ssh2-0.12.tgz
-	mv ssh2-0.12 /mnt/src/php-5.6.9/ext/ssh2
+	mv ssh2-0.12 /mnt/src/php-5.6.30/ext/ssh2
 	# 编译 PHP 时增加 --with-ssh2 选项
 
 	# 如果要把 phpredis 静态编译进 php
 	wget https://github.com/phpredis/phpredis/archive/2.2.7.tar.gz -O phpredis-2.2.7.tar.gz
 	tar -xvzf phpredis-2.2.7.tar.gz
-	mv phpredis-2.2.7 /mnt/src/php-5.6.9/ext/redis
+	mv phpredis-2.2.7 /mnt/src/php-5.6.30/ext/redis
 	# 编译 PHP 时增加 --enable-redis 选项
 
 	# 如果要把 gnupg 静态编译进 php
 	wget https://pecl.php.net/get/gnupg-1.3.6.tgz
 	tar -xvzf gnupg-1.3.6.tgz
-	mv gnupg-1.3.6 /mnt/src/php-5.6.9/ext/gnupg
+	mv gnupg-1.3.6 /mnt/src/php-5.6.30/ext/gnupg
 	# 编译 PHP 时增加 --with-gnupg 选项
 
 	# 如果要把 zip 静态编译进 php
@@ -229,7 +236,7 @@
 	# 如果要把 svn 静态编译进 php
 	wget http://pecl.php.net/get/svn-1.0.3.tgz
 	tar -xvzf svn-1.0.3.tgz
-	mv svn-1.0.3 /mnt/src/php-5.6.9/ext/svn
+	mv svn-1.0.3 /mnt/src/php-5.6.30/ext/svn
 	# 编译 PHP 时增加 --with-svn 选项
 	#
 	# 注意：源代码编译安装 subversion 时最好使用缺省安装位置，否则编译 php svn 的时候会遇到很多麻烦。
@@ -240,28 +247,28 @@
 	# 注意：php 中调用 svn_update() 时，如果有文件名中存在非 ASCII 字符，会导致失败。但如果最开始
 	#       checkout 的版本中不包含这种文件，此后 svn_update() 调用不会失败，只是相应的文件不会出现。
 
-	cd php-5.6.9
+	cd php-5.6.30
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.6.35 --with-mysql=/mnt/bin/mysql-5.6.35 --with-mysqli=/mnt/bin/mysql-5.6.35/bin/mysql_config --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --enable-xcache --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn
+	./configure --prefix=/mnt/bin/php-5.6.30 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.30 --with-pdo-mysql=/mnt/bin/mysql-5.6.35 --with-mysql=/mnt/bin/mysql-5.6.35 --with-mysqli=/mnt/bin/mysql-5.6.35/bin/mysql_config --with-openssl --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn
 	make clean
 	make
 	make install
-	ln -s /mnt/bin/php-5.6.9/bin/php /usr/bin/php
+	ln -s /mnt/bin/php-5.6.30/bin/php /usr/bin/php
 
 	# 获取 cacert.pem 文件
 	wget http://curl.haxx.se/ca/cacert.pem -O /mnt/sites/config/cacert.pem
 
 	# 生成配置文件
-	cp /mnt/src/php-5.6.9/php.ini-production /mnt/sites/config/php.ini
+	cp /mnt/src/php-5.6.30/php.ini-production /mnt/sites/config/php.ini
 
 	# 修改 /mnt/sites/config/php.ini 文件，关注以下内容：
 
 		[PHP]
 		expose_php = Off
 		short_open_tag = On
-		extension_dir = "/mnt/bin/php-5.6.9/ext/"
+		extension_dir = "/mnt/bin/php-5.6.30/ext/"
 		xcache.size = 128M
 		xcache.var_size = 128M
 		xcache.readonly_protection = On
@@ -288,7 +295,7 @@
 		# 而以 127.0.0.1 进行连接时，则会使用 TCP/IP。
 
 	# 创建 php-fpm 配置文件
-	cp /mnt/bin/php-5.6.9/etc/php-fpm.conf.default /mnt/sites/config/php-fpm.conf
+	cp /mnt/bin/php-5.6.30/etc/php-fpm.conf.default /mnt/sites/config/php-fpm.conf
 
 	# 手工修改 /mnt/sites/config/php-fpm.conf，关注以下内容：
 
@@ -319,10 +326,10 @@
 	cd /mnt/src
 	wget http://downloads3.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz
 	tar -xvzf ioncube_loaders_lin_x86-64.tar.gz
-	cp /mnt/src/ioncube/ioncube_loader_lin_5.6.so /mnt/bin/php-5.6.9/ext
+	cp /mnt/src/ioncube/ioncube_loader_lin_5.6.so /mnt/bin/php-5.6.30/ext
 
 	# 修改 /mnt/sites/config/php.ini 文件，增加以下内容：
-	zend_extension = /mnt/bin/php-5.6.9/ext/ioncube_loader_lin_5.6.so
+	zend_extension = /mnt/bin/php-5.6.30/ext/ioncube_loader_lin_5.6.so
 
 
 #### Tengine (Nginx)
@@ -348,17 +355,17 @@
 	ln -s /mnt/bin/luajit-2.0.4/lib/libluajit-5.1.so.2 /usr/lib64/libluajit-5.1.so.2
 
 	cd /mnt/src
-	wget http://tengine.taobao.org/download/tengine-2.1.2.tar.gz
-	tar -xvzf tengine-2.1.2.tar.gz
+	wget http://tengine.taobao.org/download/tengine-2.2.0.tar.gz
+	tar -xvzf tengine-2.2.0.tar.gz
 
 	# 下载并替换为更高版本的 lua-nginx-module 源代码
 	wget https://github.com/openresty/lua-nginx-module/archive/v0.10.6.tar.gz -O lua-nginx-module.v0.10.6.tar.gz
-	rm -Rf /mnt/src/tengine-2.1.2/modules/ngx_http_lua_module
-	tar -xvzf lua-nginx-module.v0.10.6.tar.gz -C /mnt/src/tengine-2.1.2/modules lua-nginx-module-0.10.6
-	mv /mnt/src/tengine-2.1.2/modules/lua-nginx-module-0.10.6 /mnt/src/tengine-2.1.2/modules/ngx_http_lua_module
+	rm -Rf /mnt/src/tengine-2.2.0/modules/ngx_http_lua_module
+	tar -xvzf lua-nginx-module.v0.10.6.tar.gz -C /mnt/src/tengine-2.2.0/modules lua-nginx-module-0.10.6
+	mv /mnt/src/tengine-2.2.0/modules/lua-nginx-module-0.10.6 /mnt/src/tengine-2.2.0/modules/ngx_http_lua_module
 
-	cd tengine-2.1.2
-	./configure --prefix=/mnt/bin/tengine-2.1.2 --conf-path=/mnt/sites/config/tengine/nginx.conf --user=daemon --group=deploy --with-pcre=/mnt/src/pcre-8.36/ --with-openssl=/mnt/src/openssl-1.0.2h --with-http_spdy_module --with-http_concat_module --with-http_lua_module --with-luajit-inc=/mnt/bin/luajit-2.0.4/include/luajit-2.0 --with-luajit-lib=/mnt/bin/luajit-2.0.4/lib
+	cd tengine-2.2.0
+	./configure --prefix=/mnt/bin/tengine-2.2.0 --conf-path=/mnt/sites/config/tengine/nginx.conf --user=daemon --group=deploy --with-pcre=/mnt/src/pcre-8.36/ --with-http_ssl_module --with-http_v2_module --with-http_concat_module --with-http_lua_module --with-luajit-inc=/mnt/bin/luajit-2.0.4/include/luajit-2.0 --with-luajit-lib=/mnt/bin/luajit-2.0.4/lib
 	make
 	make install
 
@@ -376,7 +383,7 @@
 	# 创建启动脚本 /mnt/sites/config/tengine.sh
 	# 参考 http://wiki.nginx.org/RedHatNginxInitScript
 	# 需修改如下两行跟路径相关的内容：
-	nginx="/mnt/bin/tengine-2.1.2/sbin/nginx"
+	nginx="/mnt/bin/tengine-2.2.0/sbin/nginx"
 	NGINX_CONF_FILE="/mnt/sites/config/tengine/nginx.conf"
 
 	# 注册为系统服务
@@ -386,7 +393,7 @@
 	chkconfig --level 345 tengine on
 
 	# 重新加载配置文件
-	/mnt/bin/tengine-2.1.2/sbin/nginx -s reload
+	/mnt/bin/tengine-2.2.0/sbin/nginx -s reload
 
 	# 生成 SSL 证书
 
