--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -518,6 +518,23 @@
 	npm install -g felixge/node-mysql
 
 
+#### 关于网站上传文件大小限制的配置
+
+Nginx 的相关配置
+
+	server {
+		client_max_body_size 10M;
+	}
+
+PHP 的相关配置
+
+	upload_max_filesize = 10M
+
+MySQL 的相关配置
+
+	max_allowed_packet = 10M
+
+
 其它参考资料
 ============
 
