--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -111,6 +111,8 @@
 	# 创建数据库目录
 	cd /mnt/bin/mysql-5.6.35
 	scripts/mysql_install_db --user=mysql --datadir=/mnt/data/test
+	chown -R mysql:deploy /mnt/data/test
+	chmod -R 750 /mnt/data/test
 
 	# 生成配置文件
 	cp /mnt/bin/mysql-5.6.35/support-files/my-default.cnf /mnt/sites/config/my.cnf
