--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -604,6 +604,57 @@ mysqlreport 报表解读
 	START SLAVE;
 
 
+#### 对阿里云 RDS 的 MySQL 进行主从复制（mysql >= 5.6）
+
+在阿里云的主实例上获取 server id
+
+	show variables like '%server_id%';
+
+在阿里云的主实例上做全量备份：
+
+	mysqldump --host=rm-***.mysql.rds.aliyuncs.com --port=3306 --user=repl --password=*** --databases columbus > columbus.sql
+
+从实例上配置 my.cnf：
+
+	server-id               = 2
+	log_bin                 = /mnt/data/repl/mysql-bin.log
+	expire_logs_days        = 10
+	max_binlog_size         = 100M
+	replicate-do-db         = columbus
+	replicate-ignore-db     = mysql
+	replicate-ignore-db     = information_schema
+	replicate-ignore-db     = performance_schema
+
+	# GTID
+	gtid_mode               = on
+	enforce_gtid_consistency= on
+	binlog_format           = row
+	log-slave-updates       = 1
+
+在从实例上导入全量备份文件：
+
+	mysql --socket=/tmp/mysql-repl.sock --user=columbus --password=*** -e "RESET MASTER"
+	mysql --socket=/tmp/mysql-repl.sock --user=columbus --password=*** columbus < columbus.sql
+
+在从实例上设置主从复制参数：
+
+	CHANGE MASTER TO
+		MASTER_HOST='rm-***.mysql.rds.aliyuncs.com',
+		MASTER_PORT=3306,
+		MASTER_USER='repl',
+		MASTER_PASSWORD='***',
+		MASTER_AUTO_POSITION=1;
+
+在从实例上启动、停止主从复制：
+
+	START SLAVE;
+	STOP SLAVE;
+
+在从实例上查看主从复制状态：
+
+	SHOW SLAVE STATUS\G
+
+
 #### 关闭系统进程 hald-addon-storage
 
 万网云主机技术支持：
