--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -95,6 +95,20 @@
 	mv yuicompressor-2.4.8.jar /mnt/bin/yuicompressor
 
 
+#### Jsvc
+
+> https://commons.apache.org/proper/commons-daemon/jsvc.html
+
+	cd /mnt/src
+	wget http://mirror.bit.edu.cn/apache//commons/daemon/source/commons-daemon-1.0.15-src.tar.gz
+	tar -xvzf commons-daemon-1.0.15-src.tar.gz
+	cd commons-daemon-1.0.15-src/src/native/unix/
+	./configure --with-java=/etc/alternatives/java_sdk_1.8.0/
+	make
+	mkdir /mnt/bin/commons-daemon-1.0.15
+	cp ./jsvc /mnt/bin/commons-daemon-1.0.15
+
+
 #### headless IB Gateway
 
 > http://www.brokertron.com/gateway/
