--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -108,6 +108,26 @@
 	mkdir /mnt/bin/commons-daemon-1.0.15
 	cp ./jsvc /mnt/bin/commons-daemon-1.0.15
 
+	cd /mnt/src
+	wget http://mirror.bit.edu.cn/apache//commons/daemon/binaries/commons-daemon-1.0.15-bin.tar.gz
+	tar -xvzf commons-daemon-1.0.15-bin.tar.gz
+	cp commons-daemon-1.0.15/commons-daemon-1.0.15.jar /mnt/bin/commons-daemon-1.0.15/
+
+	# 典型的启动命令如下
+	# 其中 -Xss1280k 可以解决启动时报错 Service killed by signal 11 的问题
+	$JSVC_FILE \
+	  -home $JAVA_HOME \
+	  -user $JSVC_USER \
+	  -Djava.io.tmpdir=$TMP_DIR \
+	  -wait 10 \
+	  -pidfile $PID_FILE \
+	  -outfile $LOG_FILE \
+	  -errfile '&1' \
+	  -cp $CLASSPATH \
+	  -verbose \
+	  -Xss1280k \
+	  $MAIN_CLASS
+
 
 #### headless IB Gateway
 
