--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -384,6 +384,60 @@
 	cat my-ca.cer >> 192.168.150.32.cer
 
 
+#### 通过 Let's Encrypt 获取 SSL DV 证书
+
+参考资料
+
+	如何免费的让网站启用HTTPS
+	https://coolshell.cn/articles/18094.html
+
+	How Let’s Encrypt Works
+	https://letsencrypt.org/how-it-works/
+
+	certbot
+	https://certbot.eff.org/#centos6-other
+
+	Create a Java Keystore (.JKS) from Let's Encrypt Certificates
+	https://maximilian-boehm.com/hp2121/Create-a-Java-Keystore-JKS-from-Let-s-Encrypt-Certificates.htm
+
+获取证书
+
+	# 下载安装 certbot-auto 执行脚本
+	mkdir /mnt/bin/certbot
+	cd /mnt/bin/certbot
+	wget https://dl.eff.org/certbot-auto
+	chmod a+x certbot-auto
+
+	# 注册
+	./certbot-auto register --register-unsafely-without-email
+
+	# 设置参数并获取证书
+	./certbot-auto certonly
+	# 或者直接在命令行指定所需的参数
+	./certbot-auto certonly --webroot -w /mnt/sites/mydomain.com/www -d www.mydomain.com -d mydomain.com
+
+	# 查看所有证书
+	./certbot-auto certificates
+
+	# 证书文件都在 /etc/letsencrypt/live/ 目录下
+
+更新证书
+
+	# 在 crontab 中定期执行下面的命令
+	/mnt/bin/certbot/certbot-auto renew
+
+把 PEM 证书转换为 Java Keystore (.JKS) 格式
+
+	# 先把 PEM 转换为 PKCS12 格式
+	openssl pkcs12 -export -in /etc/letsencrypt/live/www.mydomain.com/fullchain.pem -inkey /etc/letsencrypt/live/www.mydomain.com/privkey.pem -out www.mydomain.com.p12 -password pass:123456 -name mydomain
+
+	# 再把 PKCS12 文件转换成 keystore 格式
+	keytool -importkeystore -deststorepass abc123 -destkeypass abc123 -destkeystore www.mydomain.com.jks -srckeystore www.mydomain.com.p12 -srcstoretype PKCS12 -srcstorepass 123456 -alias mydomain
+
+	# 查看 keystore 里面的内容
+	keytool -list -keystore www.mydomain.com.jks -v -storepass abc123
+
+
 #### 配置 SSH 证书方式登录
 
 	# 生成 key pair
