--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -426,6 +426,10 @@
 	# 在 crontab 中定期执行下面的命令
 	/mnt/bin/certbot/certbot-auto renew
 
+删除证书
+
+	/mnt/bin/certbot/certbot-auto delete
+
 把 PEM 证书转换为 Java Keystore (.JKS) 格式
 
 	# 先把 PEM 转换为 PKCS12 格式
