--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -213,9 +213,9 @@
 	# 编译 PHP 时增加 --with-ssh2 选项
 
 	# 如果要把 phpredis 静态编译进 php
-	wget https://github.com/phpredis/phpredis/archive/2.2.7.tar.gz -O phpredis-2.2.7.tar.gz
-	tar -xvzf phpredis-2.2.7.tar.gz
-	mv phpredis-2.2.7 /mnt/src/php-5.6.30/ext/redis
+	wget https://github.com/phpredis/phpredis/archive/3.1.6.tar.gz -O phpredis-3.1.6.tar.gz
+	tar -xvzf phpredis-3.1.6.tar.gz
+	mv phpredis-3.1.6 /mnt/src/php-5.6.30/ext/redis
 	# 编译 PHP 时增加 --enable-redis 选项
 
 	# 如果要把 gnupg 静态编译进 php
@@ -518,6 +518,14 @@
 	npm install -g redis
 	npm install -g mysql
 	npm install -g felixge/node-mysql
+
+
+#### Postfix & Dovecot
+
+> 鸟哥的 Linux 私房菜 -- Mail Server
+> http://cn.linux.vbird.org/linux_server/0380mail.php
+
+	yum install postfix
 
 
 #### 关于网站上传文件大小限制的配置
