--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -713,6 +713,16 @@ mysqlreport 报表解读
 	SHOW SLAVE STATUS\G
 
 
+#### 比较两个 MySQL 数据库内容是否一致：
+
+	# 安装 mysql-utilities
+	yum install mysql-utilities.noarch
+
+	# 比较数据库内容
+	# https://dev.mysql.com/doc/mysql-utilities/1.5/en/mysqldbcompare.html
+	mysqldbcompare --server1=user1:pass1@host1:3306 --server2=user2:pass2@host2:3326 db1:db2 --difftype=sql --run-all-tests --skip-data-check
+
+
 #### 关闭系统进程 hald-addon-storage
 
 万网云主机技术支持：
