--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -28,7 +28,7 @@
 	yum install zlib-devel cmake ncurses-devel
 
 	# for PHP
-	yum install curl-devel libjpeg-devel libpng-devel giflib-devel freetype-devel perl-ExtUtils-Embed libssh2-devel libxml2 libxml2-devel gpgme-devel libmcrypt-devel
+	yum install curl-devel libjpeg-devel libpng-devel giflib-devel freetype-devel perl-ExtUtils-Embed libssh2-devel libxml2 libxml2-devel gpgme-devel libmcrypt-devel libevent-devel
 
 
 #### 创建用户账号
@@ -249,11 +249,17 @@
 	# 注意：php 中调用 svn_update() 时，如果有文件名中存在非 ASCII 字符，会导致失败。但如果最开始
 	#       checkout 的版本中不包含这种文件，此后 svn_update() 调用不会失败，只是相应的文件不会出现。
 
+	# 如果要把 libevent 静态编译进 php
+	wget https://pecl.php.net/get/libevent-0.1.0.tgz
+	tar -xvzf libevent-0.1.0.tgz
+	mv libevent-0.1.0 /mnt/src/php-5.6.30/ext/libevent
+	# 编译 PHP 时增加 --with-libevent 选项
+
 	cd php-5.6.30
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.30 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.30 --with-pdo-mysql=/mnt/bin/mysql-5.6.35 --with-mysql=/mnt/bin/mysql-5.6.35 --with-mysqli=/mnt/bin/mysql-5.6.35/bin/mysql_config --with-openssl --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn
+	./configure --prefix=/mnt/bin/php-5.6.30 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.30 --with-pdo-mysql=/mnt/bin/mysql-5.6.35 --with-mysql=/mnt/bin/mysql-5.6.35 --with-mysqli=/mnt/bin/mysql-5.6.35/bin/mysql_config --with-openssl --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --enable-pcntl --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn --with-libevent
 	make clean
 	make
 	make install
