--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -216,7 +216,7 @@
 	tar -cvzf myrepo.svn.tar.gz myrepo.svn.dump
 
 	# 恢复 SVN repo
-	svnadmin create /mnt/svn_root/myrepo
+	svnadmin create --pre-1.6-compatible /mnt/svn_root/myrepo
 	svnadmin load /mnt/svn_root/myrepo < myrepo.svn.dump
 
 	# 增量备份和恢复
