--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -22,7 +22,10 @@ http://blog.51cto.com/11821908/2057726
 
 	已知消息为 M
 	计算 H = Hash(M)
-	计算 (r-Hk)G + HK = rG - HkG + HK = rG - HK + HK = rG
+	计算 (r-Hk)G + HK
+	   = rG - HkG + HK
+	   = rG - HK + HK
+	   = rG
 
 ECDH 密钥交换
 
@@ -38,5 +41,7 @@ ECDH 密钥交换
 
 私钥解密过程
 
-	计算 (c+rK) - k(rG) = c + r(kG) - k(rG) = c
+	计算 (c+rK) - k(rG)
+	   = c + r(kG) - k(rG)
+	   = c
 	将 c 用于对称加密数据的解密
