--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -11,14 +11,14 @@ http://blog.51cto.com/11821908/2057726
 	随机生成私钥 k
 	计算出公钥 K = kG
 
-私钥签名过程
+私钥签名过程：
 
 	待签名消息为 M
 	计算 H = Hash(M)
 	产生一个随机整数 r
 	签名为 {rG, r-Hk}
 
-公钥验签过程
+公钥验签过程：
 
 	已知消息为 M
 	计算 H = Hash(M)
@@ -27,19 +27,19 @@ http://blog.51cto.com/11821908/2057726
 	   = rG - HK + HK
 	   = rG
 
-ECDH 密钥交换
+ECDH 密钥交换：
 
 	Alice 的公私钥对 (A, a)
 	Bob 的公私钥对 (B, b)
 	则 s = aB = bA 即为双方合意的密钥
 
-公钥加密过程
+公钥加密过程：
 
 	产生对称加密密钥 c
 	产生一个随机整数 r
 	密钥的密文为 {rG, c+rK}
 
-私钥解密过程
+私钥解密过程：
 
 	计算 (c+rK) - k(rG)
 	   = c + r(kG) - k(rG)
