--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -16,9 +16,29 @@ http://blog.51cto.com/11821908/2057726
 	待签名消息为 M
 	计算 H = Hash(M)
 	产生一个随机整数 r
-	签名为 {rG, r-Hk}
+	计算 {X, Y} = rG
+	计算 S = (H + kX)/r
+	签名为 {rG, S}
 
 公钥验签过程：
+
+	已知消息为 M
+	计算 H = Hash(M)
+	已知 {X, Y} = rG
+	计算 HG/S + XK/S
+	   = HG/S + X(kG)/S
+	   = (H + kX)G/S
+	   = (H + kX)G/((H + kX)/r)
+	   = rG
+
+私钥签名过程(2)：
+
+	待签名消息为 M
+	计算 H = Hash(M)
+	产生一个随机整数 r
+	签名为 {rG, r-Hk}
+
+公钥验签过程(2)：
 
 	已知消息为 M
 	计算 H = Hash(M)
@@ -37,11 +57,11 @@ ECDH 密钥交换：
 
 	产生对称加密密钥 c
 	产生一个随机整数 r
-	密钥的密文为 {rG, c+rK}
+	密钥的密文为 {rG, c + rK}
 
 私钥解密过程：
 
-	计算 (c+rK) - k(rG)
+	计算 (c + rK) - k(rG)
 	   = c + r(kG) - k(rG)
 	   = c
 	将 c 用于对称加密数据的解密
