--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -13,55 +13,62 @@ http://blog.51cto.com/11821908/2057726
 
 私钥签名过程：
 
-	待签名消息为 M
-	计算 H = Hash(M)
+	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
 	产生一个随机整数 r
-	计算 {X, Y} = rG
-	计算 S = (H + kX)/r
-	签名为 {rG, S}
+	计算 {x, y} = rG
+	计算 s = (h + kx)/r
+	发布签名为 {x, s}
 
 公钥验签过程：
 
-	已知消息为 M
-	计算 H = Hash(M)
-	已知 {X, Y} = rG
-	计算 HG/S + XK/S
-	   = HG/S + X(kG)/S
-	   = (H + kX)G/S
-	   = (H + kX)G/((H + kX)/r)
+	已知被签名数据为 h
+	计算 {x', y'} = hG/s + xK/s
+	因为 hG/s + xK/s
+	   = hG/s + x(kG)/s
+	   = (h + kx)G/s
+	   = (h + kx)G/((h + kx)/r)
 	   = rG
+	所以，验证 x = x' 即可知签名是否合法
 
+ 
 私钥签名过程(2)：
 
-	待签名消息为 M
-	计算 H = Hash(M)
+	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
 	产生一个随机整数 r
-	签名为 {rG, r-Hk}
+	计算 A = rG
+	计算 s = r - hk
+	发布签名为 {A, s}
 
 公钥验签过程(2)：
 
-	已知消息为 M
-	计算 H = Hash(M)
-	计算 (r-Hk)G + HK
-	   = rG - HkG + HK
-	   = rG - HK + HK
+	已知被签名数据为 h
+	计算 A' = sG + hK
+	因为 sG + hK
+	   = (r - hk)G + hK
+	   = rG - hkG + hK
+	   = rG - hK + hK
 	   = rG
+	所以，验证 A = A' 即可知签名是否合法
 
 ECDH 密钥交换：
 
-	Alice 的公私钥对 (A, a)
-	Bob 的公私钥对 (B, b)
-	则 s = aB = bA 即为双方合意的密钥
+	Alice 的公私钥对 {A, a}
+	Bob 的公私钥对 {B, b)
+	则 S = aB = bA 即为双方合意的密钥
 
 公钥加密过程：
 
-	产生对称加密密钥 c
+	秘密数据为 C，实际应用中 C 是随机生成的，作为对称加密密钥来使用
 	产生一个随机整数 r
-	密钥的密文为 {rG, c + rK}
+	计算 A = rG
+	计算 B = C + rK
+	发布密文为 {A, B}
 
 私钥解密过程：
 
-	计算 (c + rK) - k(rG)
-	   = c + r(kG) - k(rG)
-	   = c
-	将 c 用于对称加密数据的解密
+	计算 C' = B - kA
+	因为 B - kA
+	   = (C + rK) - k(rG)
+	   = C + r(kG) - k(rG)
+	   = C
+	所以，C' = C 即为秘密数据
