--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -14,9 +14,10 @@ http://blog.51cto.com/11821908/2057726
 私钥签名过程：
 
 	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
-	产生一个随机整数 r
+	产生一个随机整数 r  (mod n)
 	计算 {x, y} = rG
-	计算 s = (h + kx)/r
+	计算 s = (h + kx)/r  (mod p)
+	若 h/s mod p ≥ n 或者 kx/s mod p ≥ n 则需重新签名（否则无法验签）
 	发布签名为 {x, s}
 
 公钥验签过程：
@@ -30,14 +31,15 @@ http://blog.51cto.com/11821908/2057726
 	   = rG
 	所以，验证 x = x' 即可知签名是否合法
 
- 
 私钥签名过程(2)：
 
 	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
-	产生一个随机整数 r
+	产生一个随机整数 r  (mod n)
 	计算 A = rG
-	计算 s = r - hk
+	计算 s = r – hk  (mod p)
+	若 s ≥ n 则需重新签名（否则无法验签）
 	发布签名为 {A, s}
+	注意：此法的缺陷在于，若 hk mod p ≥ n 则签名失败（无法验签）
 
 公钥验签过程(2)：
 
@@ -59,10 +61,13 @@ ECDH 密钥交换：
 公钥加密过程：
 
 	秘密数据为 C，实际应用中 C 是随机生成的，作为对称加密密钥来使用
-	产生一个随机整数 r
+	产生一个随机整数 r  (mod n)
 	计算 A = rG
 	计算 B = C + rK
 	发布密文为 {A, B}
+
+	注意：
+	此法的缺陷在于，若 rk mod p ≥ n 则加密失败（无法解密），而加密者并不知情
 
 私钥解密过程：
 
