--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -6,6 +6,9 @@ https://blog.yumaojun.net/2017/02/19/go-crypto/
 椭圆曲线加解密及签名算法的技术原理及其Go语言实现
 http://blog.51cto.com/11821908/2057726
 
+关于密码中的RSA算法和ecc(椭圆曲线)算法加密过程是怎样的?
+https://www.zhihu.com/question/26662683/answer/327758926
+
 # 常见应用
 
 	随机生成私钥 k
@@ -14,10 +17,10 @@ http://blog.51cto.com/11821908/2057726
 私钥签名过程：
 
 	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
-	产生一个随机整数 r  (mod n)
+	产生一个随机整数 r  (mod p 且 r ≠ n)
 	计算 {x, y} = rG
 	计算 s = (h + kx)/r  (mod p)
-	若 h/s mod p ≥ n 或者 kx/s mod p ≥ n 则需重新签名（否则无法验签）
+	若 h/s mod p = n 或者 kx/s mod p = n 则需重新签名（否则无法验签）
 	发布签名为 {x, s}
 
 公钥验签过程：
@@ -34,12 +37,12 @@ http://blog.51cto.com/11821908/2057726
 私钥签名过程(2)：
 
 	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
-	产生一个随机整数 r  (mod n)
+	产生一个随机整数 r  (mod p 且 r ≠ n)
 	计算 A = rG
 	计算 s = r – hk  (mod p)
-	若 s ≥ n 则需重新签名（否则无法验签）
+	若 s = n 则需重新签名（否则无法验签）
 	发布签名为 {A, s}
-	注意：此法的缺陷在于，若 hk mod p ≥ n 则签名失败（无法验签）
+	注意：此法有一个缺陷，若 hk mod p = n 则签名注定失败（无法验签）
 
 公钥验签过程(2)：
 
@@ -58,16 +61,17 @@ ECDH 密钥交换：
 	Bob 的公私钥对 {B, b)
 	则 S = aB = bA 即为双方合意的密钥
 
+	注：若计算出 S = 0，则说明 ab mod p = n，此时双方可破解出对方私钥！
+
 公钥加密过程：
 
 	秘密数据为 C，实际应用中 C 是随机生成的，作为对称加密密钥来使用
-	产生一个随机整数 r  (mod n)
+	产生一个随机整数 r  (mod p 且 r ≠ n)
 	计算 A = rG
 	计算 B = C + rK
 	发布密文为 {A, B}
 
-	注意：
-	此法的缺陷在于，若 rk mod p ≥ n 则加密失败（无法解密），而加密者并不知情
+	注：若计算出 rK = 0，则说明 rk mod p = n，此时可破解出私钥！
 
 私钥解密过程：
 
