--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -17,11 +17,13 @@ https://www.zhihu.com/question/26662683/answer/327758926
 私钥签名过程：
 
 	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
-	产生一个随机整数 r  (mod p 且 r ≠ n)
+	产生一个随机整数 r  (r ＜ p 且 r ≠ n)
 	计算 {x, y} = rG
 	计算 s = (h + kx)/r  (mod p)
-	若 h/s mod p = n 或者 kx/s mod p = n 则需重新签名（否则无法验签）
 	发布签名为 {x, s}
+
+	注：若计算出 kx/s ≡ n (mod p) 则最好重新生成 r 再重新计算签名，否则
+	验签过程中计算出 xK/s = 0 会导致私钥被破解！
 
 公钥验签过程：
 
@@ -37,12 +39,12 @@ https://www.zhihu.com/question/26662683/answer/327758926
 私钥签名过程(2)：
 
 	待签名数据为 h，实际应用中一般取原始数据的哈希值为 h
-	产生一个随机整数 r  (mod p 且 r ≠ n)
+	产生一个随机整数 r  (r ＜ p 且 r ≠ n)
 	计算 A = rG
 	计算 s = r – hk  (mod p)
-	若 s = n 则需重新签名（否则无法验签）
 	发布签名为 {A, s}
-	注意：此法有一个缺陷，若 hk mod p = n 则签名注定失败（无法验签）
+
+	注：若 hk ≡ n (mod p)，则验签过程中会计算出 hK = 0，进而导致私钥被破解！
 
 公钥验签过程(2)：
 
@@ -61,17 +63,17 @@ ECDH 密钥交换：
 	Bob 的公私钥对 {B, b)
 	则 S = aB = bA 即为双方合意的密钥
 
-	注：若计算出 S = 0，则说明 ab mod p = n，此时双方可破解出对方私钥！
+	注：若计算出 S = 0，则说明 ab ≡ n (mod p)，此时双方可破解出对方私钥！
 
 公钥加密过程：
 
 	秘密数据为 C，实际应用中 C 是随机生成的，作为对称加密密钥来使用
-	产生一个随机整数 r  (mod p 且 r ≠ n)
+	产生一个随机整数 r  (r ＜ p 且 r ≠ n)
 	计算 A = rG
 	计算 B = C + rK
 	发布密文为 {A, B}
 
-	注：若计算出 rK = 0，则说明 rk mod p = n，此时可破解出私钥！
+	注：若计算出 rK = 0，则说明 rk ≡ n (mod p)，此时可破解出私钥！
 
 私钥解密过程：
 
