--- a/kb/椭圆曲线密码学算法.md
+++ b/kb/椭圆曲线密码学算法.md
@@ -28,9 +28,9 @@ https://www.zhihu.com/question/26662683/answer/327758926
 公钥验签过程：
 
 	已知被签名数据为 h
-	计算 {x', y'} = hG/s + xK/s
-	因为 hG/s + xK/s
-	   = hG/s + x(kG)/s
+	计算 {x', y'} = hG/s ⊕ xK/s
+	因为 hG/s ⊕ xK/s
+	   = hG/s ⊕ x(kG)/s
 	   = (h + kx)G/s
 	   = (h + kx)G/((h + kx)/r)
 	   = rG
@@ -49,11 +49,11 @@ https://www.zhihu.com/question/26662683/answer/327758926
 公钥验签过程(2)：
 
 	已知被签名数据为 h
-	计算 A' = sG + hK
-	因为 sG + hK
-	   = (r - hk)G + hK
-	   = rG - hkG + hK
-	   = rG - hK + hK
+	计算 A' = sG ⊕ hK
+	因为 sG ⊕ hK
+	   = (r - hk)G ⊕ hK
+	   = rG ⊙ hkG ⊕ hK
+	   = rG ⊙ hK ⊕ hK
 	   = rG
 	所以，验证 A = A' 即可知签名是否合法
 
@@ -65,21 +65,21 @@ ECDH 密钥交换：
 
 	注：若计算出 S = 0，则说明 ab ≡ n (mod p)，此时双方可破解出对方私钥！
 
-公钥加密过程：
+公钥加密过程（本质是 ElGamal 加密算法）：
 
 	秘密数据为 C，实际应用中 C 是随机生成的，作为对称加密密钥来使用
 	产生一个随机整数 r  (r ＜ p 且 r ≠ n)
 	计算 A = rG
-	计算 B = C + rK
+	计算 B = C ⊕ rK
 	发布密文为 {A, B}
 
 	注：若计算出 rK = 0，则说明 rk ≡ n (mod p)，此时可破解出私钥！
 
 私钥解密过程：
 
-	计算 C' = B - kA
-	因为 B - kA
-	   = (C + rK) - k(rG)
-	   = C + r(kG) - k(rG)
+	计算 C' = B ⊙ kA
+	因为 B ⊙ kA
+	   = (C ⊕ rK) ⊙ k(rG)
+	   = C ⊕ r(kG) ⊙ k(rG)
 	   = C
 	所以，C' = C 即为秘密数据
