--- a/puzzle/半池鸭子问题.md
+++ b/puzzle/半池鸭子问题.md
@@ -8,13 +8,13 @@
 - 把连续问题转化为离散问题，便于组合计数，然后再求极限。
 
 - 在组合计数的时候，设每只鸭子是不同的。因为最后求的是概率，就是比例，所以这种设定不会有影响。
-如果要考虑鸭子之间是无差别的，只是分子分母同时除以![](https://latex.codecogs.com/gif.latex?P_4^4=4!)而已。
+如果要考虑鸭子之间是无差别的，只是分子分母同时除以 ![](https://latex.codecogs.com/gif.latex?P_4^4=4!) 而已。
 
 # 解：
 
 把圆周分为n等份，每只鸭子的位置都是落在某一份里面。
 
-4只鸭子分配到n个格子里面，总计数为〖A=n〗^4。
+4只鸭子分配到n个格子里面，总计数为 ![](https://latex.codecogs.com/gif.latex?A=n^{4})。
 
 定义4只鸭子之间间隔最大并超过半圆的部分为缺角。
 
@@ -24,28 +24,28 @@
 
 对于占角为s的情况，其计数为：
 
-N(s)=(s^4-(s-1)^4-(s-1)^4+(s-2)^4)n=(12s^2-24s+14)n
+![](https://latex.codecogs.com/gif.latex?N%28s%29=%28s^4-{%28s-1%29}^4-{%28s-1%29}^4+{%28s-2%29}^4%29n=%2812s^2-24s+14%29n)
 - 第一项是4只鸭子在s个格子里分布的总计数。
 - 第二项是最左边界的格子里没有鸭子的计数。
 - 第三项是最右边界的格子里没有鸭子的计数。
 - 第四项是两边格子里都没有鸭子的计数，因为前两项减重复了，所以加回来。
 - 占角s可以出现在圆周的每个位置上，所以有n倍。
 
-s的取值范围为0→n/2，在这个范围内对N(s)求和，即为所有符合“4只鸭子分布在一个半圆内”的总计数：
+s的取值范围为 ![](https://latex.codecogs.com/gif.latex?0\rightarrow\frac{n}{2})，在这个范围内对N(s)求和，即为所有符合**4只鸭子分布在一个半圆内**的总计数：
 
-B=∑_(s=1)^(n/2)▒(12s^2-24s+14)n=12n∑_(s=1)^(n/2)▒s^2 -24n∑_(s=1)^(n/2)▒s+14n∑_(s=1)^(n/2)▒1
+![](https://latex.codecogs.com/gif.latex?B=\sum_{s=1}^{\frac{n}{2}}%2812s^2-24s+14%29n=12n\sum_{s=1}^{\frac{n}{2}}s^2-24n\sum_{s=1}^{\frac{n}{2}}s+14n\sum_{s=1}^{\frac{n}{2}}1)
 - 第一项可代入平方和公式进行计算。
-- 为适应平方和公式，取s=1→n/2，对最终结果无影响。
+- 为适应平方和公式，取 ![](https://latex.codecogs.com/gif.latex?1\rightarrow\frac{n}{2})，对最终结果无影响。
 - 后两项属于低阶，在后续求极限计算中会被忽略，故不必详细展开，简记为Δ。
 
 故有：
-B=12n ( n/2 (n/2+1)(2 n/2+1))/6+Δ=(n^2 (n+2)(n+1))/2+Δ
+![](https://latex.codecogs.com/gif.latex?B=12n\frac{\frac{n}{2}%28\frac{n}{2}+1%29%282\frac{n}{2}+1%29}{6}+\triangle=\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle)
 
 所以，当划分为n个格子时，所求概率为：
-p(n)=B/A=((n^2 (n+2)(n+1))/2+Δ)/n^4 =(n^4+3n^3+2n^2+Δ)/(2n^4 )
+![](https://latex.codecogs.com/gif.latex?p%28n%29=\frac{B}{A}=\frac{\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle}{n^4}=\frac{n^4+3n^3+2n^2+\triangle}{2n^4})
 
 所以原问题所求概率为：
-P=lim┬(n→∞)⁡〖p(n)〗=lim┬(n→∞)⁡〖(n^4+3n^3+2n^2+Δ)/(2n^4 )〗=1/2
+![](https://latex.codecogs.com/gif.latex?P=\lim_{n\rightarrow\infty}p%28n%29=\lim_{n\rightarrow\infty}\frac{n^4+3n^3+2n^2+\triangle}{2n^4}=\frac{1}{2})
 
 # 程序仿真模拟：
 
