--- a/puzzle/半池鸭子问题.md
+++ b/puzzle/半池鸭子问题.md
@@ -3,7 +3,7 @@
 # 思路：
 
 - 把二维问题转化为一维问题。针对任何一种鸭子分布，从圆心向每只鸭子连线，4条半径把一个周角切割成4个角。
-定义其中超过180°的角为缺角，显然缺角或者不存在，或者存在一个。缺角存在的情形就是4只鸭子都在半圆内的情形。
+定义其中不小于180°的角为空角，显然空角或者不存在，或者存在一个。空角存在的情形就是4只鸭子分布在一个半圆内的情形。
 
 - 把连续问题转化为离散问题，便于组合计数，然后再求极限。
 
@@ -16,13 +16,13 @@
 
 4只鸭子分配到n个格子里面，总计数为 ![](https://latex.codecogs.com/gif.latex?A=n^{4})。
 
-定义4只鸭子之间间隔最大并超过半圆的部分为缺角。
+定义4只鸭子之间间隔最大并超过半圆的部分为**空角**。
 
-定义与缺角互补的部分为占角s。
+定义与空角互补的部分为**占角s**。
 
 显然s的特点是：其中分布了4只鸭子，且两边的格子都不空。
 
-对于占角为s的情况，其计数为：
+对于给定的占角s，其计数为：
 
 ![](https://latex.codecogs.com/gif.latex?N%28s%29=%28s^4-{%28s-1%29}^4-{%28s-1%29}^4+{%28s-2%29}^4%29n=%2812s^2-24s+14%29n)
 - 第一项是4只鸭子在s个格子里分布的总计数。
@@ -35,16 +35,19 @@ s的取值范围为 ![](https://latex.codecogs.com/gif.latex?0\rightarrow\frac{n
 
 ![](https://latex.codecogs.com/gif.latex?B=\sum_{s=1}^{\frac{n}{2}}%2812s^2-24s+14%29n=12n\sum_{s=1}^{\frac{n}{2}}s^2-24n\sum_{s=1}^{\frac{n}{2}}s+14n\sum_{s=1}^{\frac{n}{2}}1)
 - 第一项可代入平方和公式进行计算。
-- 为适应平方和公式，取 ![](https://latex.codecogs.com/gif.latex?1\rightarrow\frac{n}{2})，对最终结果无影响。
-- 后两项属于低阶，在后续求极限计算中会被忽略，故不必详细展开，简记为Δ。
+- 为适应平方和公式，取 ![](https://latex.codecogs.com/gif.latex?s=1\rightarrow\frac{n}{2})，对最终结果无影响。
+- 后两项属于n的低阶，在后续求极限计算中会被忽略，故不必详细展开，简记为Δ。
 
 故有：
+
 ![](https://latex.codecogs.com/gif.latex?B=12n\frac{\frac{n}{2}%28\frac{n}{2}+1%29%282\frac{n}{2}+1%29}{6}+\triangle=\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle)
 
 所以，当划分为n个格子时，所求概率为：
+
 ![](https://latex.codecogs.com/gif.latex?p%28n%29=\frac{B}{A}=\frac{\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle}{n^4}=\frac{n^4+3n^3+2n^2+\triangle}{2n^4})
 
 所以原问题所求概率为：
+
 ![](https://latex.codecogs.com/gif.latex?P=\lim_{n\rightarrow\infty}p%28n%29=\lim_{n\rightarrow\infty}\frac{n^4+3n^3+2n^2+\triangle}{2n^4}=\frac{1}{2})
 
 # 程序仿真模拟：
