--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -131,7 +131,8 @@
 	du --max-depth=1 -m /
 
 查看 SATA 设备支持
-> http://www.cyberciti.biz/faq/linux-sata-drive-displayed-as-devhda/
+
+	# http://www.cyberciti.biz/faq/linux-sata-drive-displayed-as-devhda/
 
 	grep -i SATA /boot/config-`uname -r`
 	lsmod | egrep 'ata_piix|libata'
@@ -203,16 +204,18 @@
 
 #### 系统
 
-> vmstat数据解读及系统瓶颈分析
-> http://dogking.chinaunix.com/space.php?uid=11988184&do=blog&id=190171
+[vmstat数据解读及系统瓶颈分析](http://dogking.chinaunix.com/space.php?uid=11988184&do=blog&id=190171)
 
-> 系统状态查看工具Sysstat
-> http://www.linuxsir.org/main/?q=node/211
+[系统状态查看工具Sysstat](http://www.linuxsir.org/main/?q=node/211)
 
 修改主机名
 
-	# 修改 /etc/sysconfig/network 文件，重启系统后生效：
-	HOSTNAME=my-server
+	# https://phoenixnap.com/kb/how-to-set-or-change-a-hostname-in-centos-7
+	# 查看
+	hostnamectl
+
+	# 设置
+	hostnamectl set-hostname my-server
 
 	# 使用以下命令之一，新会话生效，重启系统后失效：
 	echo my-server > /proc/sys/kernel/hostname
@@ -458,8 +461,7 @@
 
 > 开启 Swap 可能会导致服务器性能下降
 
-> Linux Add a Swap File – Howto
-> http://www.cyberciti.biz/faq/linux-add-a-swap-file-howto/
+[Linux Add a Swap File – Howto](http://www.cyberciti.biz/faq/linux-add-a-swap-file-howto/)
 
 
 #### 启用 iptables
@@ -505,11 +507,9 @@
 
 #### PGP keys
 
-> GnuPG - Using keys
-> http://www.dewinter.com/gnupg_howto/english/GPGMiniHowto-3.html
+[GnuPG - Using keys](http://www.dewinter.com/gnupg_howto/english/GPGMiniHowto-3.html)
 
-> gpg --gen-key 时解决卡死问题
-> http://serverfault.com/questions/471412/gpg-gen-key-hangs-at-gaining-enough-entropy-on-centos-6
+[gpg --gen-key 时解决卡死问题](http://serverfault.com/questions/471412/gpg-gen-key-hangs-at-gaining-enough-entropy-on-centos-6)
 
 设置当前使用的 key store
 
@@ -592,18 +592,15 @@
 
 分析工具
 
-> 五款常用mysql slow log分析工具的比较
-> http://www.iteye.com/topic/242516
+[五款常用mysql slow log分析工具的比较](http://www.iteye.com/topic/242516)
 
-> mysqlreport
-> http://hackmysql.com/mysqlreport
+[mysqlreport](http://hackmysql.com/mysqlreport)
 
 	./mysqlreport -host www.mysite.com -port 3306 -user root -password *** -outfile 3306.report.txt
 
 mysqlreport 报表解读
 
-> mysqlreport——MySQL 效能监控工具
-> http://www.heyues.com/mysqlreport/
+[mysqlreport——MySQL 效能监控工具](http://www.heyues.com/mysqlreport/)
 
 
 #### MySQL 数据备份
@@ -733,8 +730,7 @@ mysqlreport 报表解读
 	如果认为对您的服务器造成影响，请您联系您的销售专员，为您更换一台更合适的服务器。给您
 	带来不便请您谅解！
 
-> 参考资料
-> http://www.linuxforums.org/forum/newbie/160675-solved-completely-disabling-hald-addon-storage-not-just-stop-polling.html
+[参考资料](http://www.linuxforums.org/forum/newbie/160675-solved-completely-disabling-hald-addon-storage-not-just-stop-polling.html)
 
 创建文件 /etc/hal/fdi/policy/99-custom-rules.fdi 内容如下：
 
