--- a/puzzle/半池鸭子问题.md
+++ b/puzzle/半池鸭子问题.md
@@ -12,9 +12,9 @@
 
 # 解：
 
-把圆周分为n等份，每只鸭子的位置都是落在某一份里面。
+把圆周等分为n个格子，每只鸭子的位置都是落在某一格子里面。
 
-4只鸭子分配到n个格子里面，总计数为 ![](https://latex.codecogs.com/gif.latex?A=n^{4})。
+4只鸭子分配到n个格子里面，总计数为 ![](https://latex.codecogs.com/gif.latex?A%28n%29=n^{4})。
 
 定义4只鸭子之间间隔最大并超过半圆的部分为**空角**。
 
@@ -24,27 +24,31 @@
 
 对于给定的占角s，其计数为：
 
-![](https://latex.codecogs.com/gif.latex?N%28s%29=%28s^4-{%28s-1%29}^4-{%28s-1%29}^4+{%28s-2%29}^4%29n=%2812s^2-24s+14%29n)
+![](https://latex.codecogs.com/gif.latex?N%28s,n%29=%28s^4-{%28s-1%29}^4-{%28s-1%29}^4+{%28s-2%29}^4%29n)
 - 第一项是4只鸭子在s个格子里分布的总计数。
 - 第二项是最左边界的格子里没有鸭子的计数。
 - 第三项是最右边界的格子里没有鸭子的计数。
 - 第四项是两边格子里都没有鸭子的计数，因为前两项减重复了，所以加回来。
 - 占角s可以出现在圆周的每个位置上，所以有n倍。
+- 特殊地，N(0,n)=0，N(1,n)=n。
 
-s的取值范围为 ![](https://latex.codecogs.com/gif.latex?0\rightarrow\frac{n}{2})，在这个范围内对N(s)求和，即为所有符合**4只鸭子分布在一个半圆内**的总计数：
+对s展开，得到：
 
-![](https://latex.codecogs.com/gif.latex?B=\sum_{s=1}^{\frac{n}{2}}%2812s^2-24s+14%29n=12n\sum_{s=1}^{\frac{n}{2}}s^2-24n\sum_{s=1}^{\frac{n}{2}}s+14n\sum_{s=1}^{\frac{n}{2}}1)
+![](https://latex.codecogs.com/gif.latex?N%28s,n%29=%2812s^2-24s+14%29n)
+
+s的取值范围为 ![](https://latex.codecogs.com/gif.latex?1\rightarrow\frac{n}{2})，在这个范围内对N(s,n)求和，即为所有符合**4只鸭子分布在一个半圆内**的总计数：
+
+![](https://latex.codecogs.com/gif.latex?B%28n%29=\sum_{s=1}^{\frac{n}{2}}%2812s^2-24s+14%29n=12n\sum_{s=1}^{\frac{n}{2}}s^2-24n\sum_{s=1}^{\frac{n}{2}}s+14n\sum_{s=1}^{\frac{n}{2}}1)
 - 第一项可代入平方和公式进行计算。
-- 为适应平方和公式，取 ![](https://latex.codecogs.com/gif.latex?s=1\rightarrow\frac{n}{2})，对最终结果无影响。
 - 后两项属于n的低阶，在后续求极限计算中会被忽略，故不必详细展开，简记为Δ。
 
 故有：
 
-![](https://latex.codecogs.com/gif.latex?B=12n\frac{\frac{n}{2}%28\frac{n}{2}+1%29%282\frac{n}{2}+1%29}{6}+\triangle=\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle)
+![](https://latex.codecogs.com/gif.latex?B%28n%29=12n\frac{\frac{n}{2}%28\frac{n}{2}+1%29%282\frac{n}{2}+1%29}{6}+\triangle=\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle)
 
 所以，当划分为n个格子时，所求概率为：
 
-![](https://latex.codecogs.com/gif.latex?p%28n%29=\frac{B}{A}=\frac{\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle}{n^4}=\frac{n^4+3n^3+2n^2+\triangle}{2n^4})
+![](https://latex.codecogs.com/gif.latex?p%28n%29=\frac{B%28n%29}{A%28n%29}=\frac{\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle}{n^4}=\frac{n^4+3n^3+2n^2+\triangle}{2n^4})
 
 所以原问题所求概率为：
 
@@ -52,6 +56,7 @@ s的取值范围为 ![](https://latex.codecogs.com/gif.latex?0\rightarrow\frac{n
 
 # 程序仿真模拟：
 
+这段Javascript程序代码可以粘贴到Chrome浏览器的console里面执行：
 ```javascript
 var total = 1000000; // 重复实验次数
 var cnt = 0; // 分布在一个半圆之内的次数
@@ -69,3 +74,5 @@ for (var i = 0; i < total; i++) {
 console.log(cnt / total);
 // 最后输出结果类似这样：0.499715 0.500318
 ```
+
+注：本文中的公式用LaTeX书写，用[latex.codecogs.com](https://latex.codecogs.com/)编辑和渲染。
