--- a/puzzle/半池鸭子问题.md
+++ b/puzzle/半池鸭子问题.md
@@ -8,13 +8,13 @@
 - 把连续问题转化为离散问题，便于组合计数，然后再求极限。
 
 - 在组合计数的时候，设每只鸭子是不同的。因为最后求的是概率，就是比例，所以这种设定不会有影响。
-如果要考虑鸭子之间是无差别的，只是分子分母同时除以 ![](https://latex.codecogs.com/gif.latex?P_4^4=4!) 而已。
+如果要考虑鸭子之间是无差别的，只是分子分母同时除以 ![](https://latex.codecogs.com/gif.latex?\bg_white%20P_4^4=4!) 而已。
 
 # 解：
 
 把圆周等分为n个格子，每只鸭子的位置都是落在某一格子里面。
 
-4只鸭子分配到n个格子里面，总计数为 ![](https://latex.codecogs.com/gif.latex?A%28n%29=n^{4})。
+4只鸭子分配到n个格子里面，总计数为 ![](https://latex.codecogs.com/gif.latex?\bg_white%20A%28n%29=n^{4})。
 
 定义4只鸭子之间间隔最大并超过半圆的部分为**空角**。
 
@@ -24,7 +24,7 @@
 
 对于给定的占角s，其计数为：
 
-![](https://latex.codecogs.com/gif.latex?N%28s,n%29=%28s^4-{%28s-1%29}^4-{%28s-1%29}^4+{%28s-2%29}^4%29n)
+![](https://latex.codecogs.com/gif.latex?\bg_white%20N%28s,n%29=%28s^4-{%28s-1%29}^4-{%28s-1%29}^4+{%28s-2%29}^4%29n)
 - 第一项是4只鸭子在s个格子里分布的总计数。
 - 第二项是最左边界的格子里没有鸭子的计数。
 - 第三项是最右边界的格子里没有鸭子的计数。
@@ -34,35 +34,35 @@
 
 对s展开，得到：
 
-![](https://latex.codecogs.com/gif.latex?N%28s,n%29=%2812s^2-24s+14%29n)
+![](https://latex.codecogs.com/gif.latex?\bg_white%20N%28s,n%29=%2812s^2-24s+14%29n)
 
-s的取值范围为 ![](https://latex.codecogs.com/gif.latex?1\rightarrow\frac{n}{2})，在这个范围内对N(s,n)求和，即为所有符合**4只鸭子分布在一个半圆内**的总计数：
+s的取值范围为 ![](https://latex.codecogs.com/gif.latex?\bg_white%201\to\frac{n}{2})，在这个范围内对N(s,n)求和，即为所有符合**4只鸭子分布在一个半圆内**的总计数：
 
-![](https://latex.codecogs.com/gif.latex?B%28n%29=\sum_{s=1}^{\frac{n}{2}}%2812s^2-24s+14%29n=12n\sum_{s=1}^{\frac{n}{2}}s^2-24n\sum_{s=1}^{\frac{n}{2}}s+14n\sum_{s=1}^{\frac{n}{2}}1)
-- 第一项可代入平方和公式进行计算。
+![](https://latex.codecogs.com/gif.latex?\bg_white%20B%28n%29=\sum_{s=1}^{\frac{n}{2}}%2812s^2-24s+14%29n=12n\sum_{s=1}^{\frac{n}{2}}s^2-24n\sum_{s=1}^{\frac{n}{2}}s+14n\sum_{s=1}^{\frac{n}{2}}1)
+- 第一项可代入平方和公式进行计算。![](https://latex.codecogs.com/gif.latex?\bg_white%20\sum_{s=1}^{n}s^2=\frac{n%28n+1%29%282n+1%29}{6})
 - 后两项属于n的低阶，在后续求极限计算中会被忽略，故不必详细展开，简记为Δ。
 
 故有：
 
-![](https://latex.codecogs.com/gif.latex?B%28n%29=12n\frac{\frac{n}{2}%28\frac{n}{2}+1%29%282\frac{n}{2}+1%29}{6}+\triangle=\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle)
+![](https://latex.codecogs.com/gif.latex?\bg_white%20B%28n%29=12n\frac{\frac{n}{2}%28\frac{n}{2}+1%29%282\frac{n}{2}+1%29}{6}+\triangle=\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle)
 
 所以，当划分为n个格子时，所求概率为：
 
-![](https://latex.codecogs.com/gif.latex?p%28n%29=\frac{B%28n%29}{A%28n%29}=\frac{\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle}{n^4}=\frac{n^4+3n^3+2n^2+\triangle}{2n^4})
+![](https://latex.codecogs.com/gif.latex?\bg_white%20p%28n%29=\frac{B%28n%29}{A%28n%29}=\frac{\frac{n^2%28n+2%29%28n+1%29}{2}+\triangle}{n^4}=\frac{n^4+3n^3+2n^2+\triangle}{2n^4})
 
 所以原问题所求概率为：
 
-![](https://latex.codecogs.com/gif.latex?P=\lim_{n\rightarrow\infty}p%28n%29=\lim_{n\rightarrow\infty}\frac{n^4+3n^3+2n^2+\triangle}{2n^4}=\frac{1}{2})
+![](https://latex.codecogs.com/gif.latex?\bg_white%20P=\lim_{n\to\infty}p%28n%29=\lim_{n\to\infty}\frac{n^4+3n^3+2n^2+\triangle}{2n^4}=\frac{1}{2})
 
 # 程序仿真模拟：
 
-这段Javascript程序代码可以粘贴到Chrome浏览器的console里面执行：
+下面这段Javascript程序代码可以粘贴到Chrome浏览器的console里面直接执行：
 ```javascript
 var total = 1000000; // 重复实验次数
 var cnt = 0; // 分布在一个半圆之内的次数
 for (var i = 0; i < total; i++) {
 	// 不失一般性，设第一只鸭子的位置为0
-	// 随机产生另外3只鸭子的位置
+	// 随机产生另外3只鸭子的位置 [0.0, 1.0)
 	var a = [Math.random(), Math.random(), Math.random()];
 	// 求出4个间隔
 	a.sort();
@@ -75,4 +75,4 @@ console.log(cnt / total);
 // 最后输出结果类似这样：0.499715 0.500318
 ```
 
-注：本文中的公式用LaTeX书写，用[latex.codecogs.com](https://latex.codecogs.com/)编辑和渲染。
+*注：本文中的数学公式用`LaTeX`书写，用[latex.codecogs.com](https://latex.codecogs.com/)编辑和渲染。*
