--- a/kb/科学上网.md
+++ b/kb/科学上网.md
@@ -6,13 +6,13 @@
 
 购买境外（香港）的 VPN 也是一个办法，但据说骗子很多，买来之后用一段时间就消失了。没办法，被流氓逼着找门道，结果撞到骗子手里。
 
-比较可靠的办法是购买正规的服务器，比如 Linode，小贵。如果购买了 Linode 服务器，后面的使用就很简单了。
+比较可靠的办法是购买正规的服务器，比如 Linode，或者阿里云的境外 ECS。有了境外的服务器，后面的使用就很简单了。
 
 服务器端只要选择一个合适的 Linux 镜像（比如 CentOS）安装好，就没有别的需要做了。
 
 本机（需科学上网的桌面电脑）下载安装一个 PuTTY，工具就齐备了。用下面这个命令行启动程序，一个翻墙代理服务器就 ready 了：
 
-	"C:\Program Files (x86)\PuTTY\putty.exe" -l USERNAME -pw PASSWORD -D 0.0.0.0:7777 IP
+	"C:\Program Files (x86)\PuTTY\putty.exe" -l USERNAME -pw PASSWORD -D 0.0.0.0:7070 IP
 
 	其中：
 
@@ -24,11 +24,18 @@
 
 	类型：SOCKS5
 	地址：127.0.0.1
-	端口：7777
+	端口：7070
 
 这样，浏览器就可以科学上网了。
 
-如果是谷歌浏览器，为了能够更方便地区分需要翻墙和不需要翻墙的网站，建议到谷歌应用商店里安装一个名为 Proxy SwitchyOmega 的扩展程序。
+新安装的谷歌浏览器缺省情况下并不能直接配置代理服务器，而是选择使用系统提供的代理配置，而 Windows 10 设置 SOCKS 代理的方式并不直观方便。
+对于谷歌浏览器来说，最直接的方式是利用命令行参数加载代理配置：
+```
+"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --proxy-server="socks5://127.0.0.1:7070"
+```
+使用这个方法时一定要注意一点：**先把所有 chrome 进程退干净！** 否则无效！
+
+为了能够更方便地区分需要翻墙和不需要翻墙的网站，建议到谷歌应用商店里安装一个名为 Proxy SwitchyOmega 的扩展程序。
 反正有了翻墙代理服务器，谷歌应用商店也是可以访问的了，哈哈
 
 ----
@@ -47,7 +54,7 @@
 
 然后，本机启动翻墙代理服务器的命令行改为（主要差别是服务器地址和端口）：
 
-	"C:\Program Files (x86)\PuTTY\putty.exe" -l USERNAME -pw PASSWORD -D 0.0.0.0:7777 -P 2345 ECS_IP
+	"C:\Program Files (x86)\PuTTY\putty.exe" -l USERNAME -pw PASSWORD -D 0.0.0.0:7070 -P 2345 ECS_IP
 
 	其中：
 
